# rustacean-roulette

./: Cargo.toml  README.md  justfile
.github/workflows/: release.yml
src/: constants.rs  defaults.rs  lib.rs  main.rs
src/commands/: mod.rs  peek.rs  roulette.rs
