[package]
name = "rustacean-roulette"
version = "0.1.2"
readme = "README.md"
description = "A simple Russian Roulette Telegram bot implemented in Rust."
keywords = ["russian-roulette", "telegram-bot", "game", "games", "cli"]
categories = ["games", "command-line-utilities"]
edition = "2024"
include = ["/src", "README.md"]
repository = "https://github.com/PRO-2684/rustacean-roulette"
license = "MIT"
authors = ["PRO-2684"]

[dependencies]
env_logger = "0.11.8"
frankenstein = { version = "0.40.0", features = ["client-reqwest"] }
log = "0.4.27"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
toml = "0.8.20"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true  # Enable link-time optimization.
codegen-units = 1  # Set the number of codegen units to 1.

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
